--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.4.1'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+//	id 'io.quarkus' version '1.10.4.Final'
 	id 'com.gorylenko.gradle-git-properties' version '2.2.4'
 	id 'java'
 }
